Working on Info mobile, issues with horizontal scrolling

--- a/src/pages/engineers/Engineers.sass
+++ b/src/pages/engineers/Engineers.sass
@@ -49,3 +49,6 @@
 
 .engineer-carousel-top-inset
     margin-top: 10rem
+
+.engineer-slide
+    overflow: hidden
